:lipstick: fix broken style

--- a/src/components/ImageHostingSelect.less
+++ b/src/components/ImageHostingSelect.less
@@ -1,7 +1,7 @@
 .imageHostingSelect {
   :global {
-    .ant-select-selection--single {
-      height: 72px;
+    .ant-select-selector {
+      height: 72px !important;
     }
   }
 }
